fix: link not visible in content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,8 +55,19 @@ a:hover {
   @apply text-orange-600;
 }
 
+.content {
+  overflow: hidden;
+}
+
+.content a {
+  @apply text-orange-600;
+  &:hover {
+    @apply underline;
+  }
+}
+
 code:not([class*="language-"]) {
-  @apply font-mono text-xs rounded-sm inline-block bg-gray-100 text-red-600 border border-gray-300;
+  @apply font-mono text-xs whitespace-nowrap rounded-sm inline-block bg-gray-100 text-red-600 border border-gray-300 overflow-x-scroll;
   padding: 0.1em 0.5em;
   margin: 0 0.2em;
   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
